# uday_workspace

./: .script.cpp.swp  commands.txt  learning.txt  link.txt  lsoutput.txt
cmke/cmake-3.30.3-tutorial-source/Step1/: CMakeLists.txt  testing.cxx
cmke/cmake-3.30.3-tutorial-source/Step2/: CMakeLists.txt  tutorial.cxx
cmke/cmake-3.30.3-tutorial-source/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
cmke/cmake-3.30.3-tutorial-source/step1_build/: CMakeCache.txt  Makefile  Tutorial  TutorialConfig.h  cmake_install.cmake
cmke/cmake-3.30.3-tutorial-source/step2_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
cmke/cmake-3.30.3-tutorial-source/step2_build/MathFunctions/: Makefile  cmake_install.cmake
cmke/example/: .testing.cxx.swp  CMakeLists.txt  CMakeLists.txt.bak  testing.cxx
cmke/example/MathFunctions/: CMakeLists.txt
cmke/example/files/: nums2.txt  nums3.txt  nums4.txt
cmke/example/include/: sqrt.h  square.h
cmke/example/sample/: CMakeLists.txt  MathFunctions.cxx  mysqrt.cxx
cmke/example/sqrt/: sqrt.cxx
cmke/example/square/: square.cxx  square.h
cmke/includeFolder/: CMakeLists.txt
cmke/makebyexample/: CMakeLists.txt  out
cmke/makebyexample/conditional/: CMakeLists.txt  main.cpp  main_linux.cpp  main_windows.cpp
cmke/makebyexample/multipleTargets/: CMakeLists.txt
cmke/makebyexample/one/: CMakeLists.txt
dest/: asdf.txt
files/: asdf.txt  bigFile.txt  jargan.txt  one.py  script.cpp
vcs/: new.patch  read  setup.py
vcs/patch/: 0001-This-is-a-Commit-to-test-for-generating-a-ptach.patch
